# dubsync

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.github/workflows/: ci.yml  release.yml
assets/: README.md
installer/: dubsync.iss
installer/macos/: Info.plist.template  build-app.sh
src/: binpath.rs  cli.rs  error.rs  ffmpeg.rs  ffprobe.rs  interactive.rs  lib.rs  progress.rs  report.rs  tempdir.rs
src/audio/: mod.rs  peaks.rs  stretch.rs  vad.rs  wav.rs
src/correlation/: gcc_phat.rs  mod.rs  offset_map.rs  sliding.rs
src/gui/: chat_panel.rs  dropzones.rs  mod.rs  options_panel.rs  persistence.rs  run_controller.rs  title_bar.rs  window_resize.rs
src/subtitle/: mod.rs  srt.rs
src/sync/: applier.rs  mod.rs
tests/: README.md
